# primer2

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  lines.sh  package-lock.json  package.json  run-test.sh  run.sh
backend/: .env.example  Cargo.toml
backend/data/: students.json
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20260429_000001_create_learning_tables.rs  m20260429_000002_create_narrative_characters.rs  m20260429_000003_create_student_books.rs  m20260429_000004_add_student_xp.rs  m20260429_000005_add_current_book_state.rs  m20260429_000006_create_infographic_voiceovers.rs
backend/src/: auth.rs  db.rs  domain.rs  main.rs  memory.rs  openai.rs  report_card.rs  request_logging.rs  routes.rs  voiceover_store.rs
backend/src/entities/: concept_progress.rs  infographic_voiceover.rs  lesson_page.rs  local_user.rs  mod.rs  narrative_character.rs  narrative_character_biography.rs  student.rs  student_book.rs  student_book_entry.rs  student_book_lesson.rs  student_memory.rs  student_xp_event.rs
docker/postgres/: Dockerfile
docker/postgres/init/: 001-extensions.sql
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuthGate.tsx  LessonGenerationOverlay.tsx  PrimerBook.tsx  ReportCardPages.tsx
infra/: README.md  alb.tf  ecr.tf  ecs.tf  iam.tf  locals.tf  network.tf  outputs.tf  postgres.tf  secrets.tf  security.tf  terraform.tfvars.example  variables.tf
infra/docker/: backend.Dockerfile  frontend.Dockerfile
infra/user-data/: postgres.sh.tftpl
(+9 files in other folders)
