[package]
name = "primerlab-api"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
poem = "3.1.12"
reqwest = { version = "0.13.3", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
