[package]
name = "primerlab-api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
poem = "3.1.12"
reqwest = { version = "0.13.3", features = ["json", "rustls"] }
sea-orm = { version = "1.1.20", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-json", "with-uuid", "with-chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
