[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
sea-orm-migration = { version = "1.1.20", features = ["runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "with-json", "with-uuid"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
